...
                            color: Colors.white,
                            strokeWidth: 2,
                          ),
                        )
                      : Text(
                          context.tr.signin,
                          key: Key('signin_button'),
                          style: AppConstants.buttonTextStyle.copyWith(
                            fontSize: 16,
                            fontWeight: FontWeight.w600,
                          ),
                          textAlign: TextAlign.center, 
                          overflow: TextOverflow.ellipsis,
...
